# AgentProxy

./: .gitignore  README.md  pyproject.toml  setup.sh
config/: mcp.json
src/agent_proxy/: __init__.py  main.py  models.py
src/agent_proxy/config/: __init__.py  defaults.yaml
src/agent_proxy/core/: __init__.py  browser_controller.py  mitm_controller.py  param_extractor.py  passive_scan.py  session_manager.py  traffic_db.py
src/agent_proxy/tools/: __init__.py  tools.py
