[project]
name = "agent-proxy"
version = "0.1.0"
description = "AI-Agent-Native Web Debug Proxy - Browser Automation + MITM Traffic Interception for Codex/Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "mitmproxy>=10.0.0",
    "playwright>=1.40.0",
    "curl-cffi>=0.6.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "jsonpath-ng>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
agent-proxy = "agent_proxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
